src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
                                       ▲
                                       ║
                                       ║
                                       ║
                                       ║
                                       █
                                       █
 20 lines | Auto-scroll | Ln 21        ▼
