src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_disabled.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│ 1 lines | Auto-scroll | Ln 2                   │
└────────────────────────────────────────────────┘
