src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_empty.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│ 0 lines | Auto-scroll                          │
└────────────────────────────────────────────────┘
