src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_exit_code.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│Done.                                           │
│                                                │
│                                                │
│                                                │
│                                                │
│ Exit: 0 | 1 lines | Ln 1                       │
└────────────────────────────────────────────────┘
