src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_running.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│Starting build...                               │
│                                                │
│                                                │
│                                                │
│                                                │
│ Running | 1 lines | Ln 1                       │
└────────────────────────────────────────────────┘
