src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_with_ansi_colors.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│   Compiling envision v0.7.0                    │
│    Finished in 2.5s                            │
│error[E0308]: mismatched types                  │
│                                                │
│                                                │
│                                                │
│                                                │
│ 3 lines | Ln 1                                 │
└────────────────────────────────────────────────┘
