src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_with_content.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
┌Output──────────────────────────────────────────┐
│Line 1: Hello, world!                           │
│Line 2: Compiling...                            │
│Line 3: Done.                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│ 3 lines | Ln 1                                 │
└────────────────────────────────────────────────┘
