src/component/terminal_output/snapshots/envision__component__terminal_output__tests__view_with_line_numbers.snap
---
source: src/component/terminal_output/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│1 Line content 1                                │
│2 Line content 2                                │
│3 Line content 3                                │
│4 Line content 4                                │
│5 Line content 5                                │
│                                                │
│                                                │
│ 5 lines | Ln 1                                 │
└────────────────────────────────────────────────┘
